--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,6 @@
 .logo img {
     width: 15%;
     transition: 1s;
-    transform: scale(1.1);
 }
 
 
@@ -50,7 +49,7 @@
 .line {
     margin-top: 70px;
     width: 100%;
-    background: url("img/hr-img.png") repeat-x;
+    background: url("hr-img.png") repeat-x;
     background-size: 4px 20px;
 }
 
@@ -97,7 +96,7 @@
 
 .lists {
     list-style: none;
-    background-image: url("img/list-bg.png");
+    background-image: url("list-bg.png");
     width: 100%;
     height: 500px;
     background-position: center;
